// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleLoadUrls Saga should call the loadUrlsError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`handleLoadUrls Saga should dispatch the loadUrlsSuccess action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`handleShortifyUrl Saga should call the shortifyUrlError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`handleShortifyUrl Saga should call the shortifyUrlError action if the response errors 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://google.co.uk",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`handleShortifyUrl Saga should dispatch the shortifyUrlSuccess action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`handleShortifyUrl Saga should dispatch the shortifyUrlSuccess action if it requests the data successfully 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://google.co.uk",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
